<resources>
    <string name="app_name">HappyDreche</string>
    <string name="app_title">Happy Drêche</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hd_email">"happydreche@gmail.com"</string>
    <string name="logout"> "Se déconnecter"</string>

    //Welcome
    <string name="welcome_description">"Annuaire des projets de valorisation de la drêche de brasserie"</string>
    <string name="welcome_connexion">"C'est parti !!!"</string>
    <string name="welcome_newuser">"Créer un compte"</string>
    <string name="facebook_application_id" translatable="false">824648164650350</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb824648164650350</string>
    <string name="welcome_title">"Connexion"</string>

    //Menu
    <string name="menu_pres">Présentation</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_map">Map</string>
    <string name="menu_listing">Listing</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add a project</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_communicate">Communicate</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    //Presentation
    <string name="presentation_text">"Où acheter des produits à base de drêche? Où en consommer? Qui la transforme? Qui fait des recherces? C'est toutes ces infos que nous voulons recenser dans cette appli, avec votre aide!</string>
    <string name="presentation_shop">"Les boutiques où vous trouverez des produits à base de drêche.</string>
    <string name="presentation_eat">"Les brasseries, les salons de thé, les restos où vous pourrez manger des produits à base de drêche.</string>
    <string name="presentation_project">"Les acteurs de la transformation de la drêche.</string>
    <string name="presentation_research">"Les projets de recherche pour mieux connaître la drêche.</string>

    //Map
    <string name="map_bottom_market">"Acheter"</string>
    <string name="map_bottom_resto">"Déguster"</string>
    <string name="map_bottom_transfo">"Transformer"</string>
    <string name="map_bottom_research">"Connaître"</string>
    <string name="map_bottom_all">"Tous"</string>

    // Add Project
    <string name="add_title">"Ajouter un projet"</string>
    <string name="add_type">"Type de projet"</string>
    <string name="add_description_title">"Description"</string>
    <string name="add_description_text">"En quoi consiste ce projet?"</string>
    <string name="add_picture_url">"Url de l'image"</string>
    <string name="add_name">"Nom du projet"</string>
    <string name="add_boss">"Responsable(s)"</string>
    <string name="add_website">"Site internet"</string>
    <string name="add_email">"Adresse email"</string>
    <string name="add_tel">"Téléphone"</string>
    <string name="add_address_title">"Adresse</string>
    <string name="set_location_number">"Numéro"</string>
    <string name="set_location_street">"Rue"</string>
    <string name="set_location_street2">"Complément"</string>
    <string name="location_street2">"Appt, étage, bât&#8230;"</string>
    <string name="set_location_zipcode">"Code postal"</string>
    <string name="set_location_town">"Ville"</string>
    <string name="set_location_country">"Pays"</string>
    <string name="save_btn">"Enregistrer"</string>
    <string name="save_error">"Il faut entrer au minimum un nom de projet, une description et une adresse complète"
    </string>
    <string name="save_completed">"Nouveau projet enregistré"</string>

    <string-array name="add_project_type">
        <item>Acheter</item>
        <item>Déguster</item>
        <item>Transformer</item>
        <item>Connaitre</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
