<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_bigmargin"
        android:paddingLeft="@dimen/activity_horizontal_bigmargin"
        android:paddingRight="@dimen/activity_horizontal_bigmargin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">


    <ImageView
            android:layout_width="@dimen/nav_header_logo"
            android:layout_height="@dimen/nav_header_logo"
            app:srcCompat="@drawable/logo2"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"
    android:layout_gravity="top"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hd_email"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/textView"/>

</LinearLayout>
